[MarkScan] Update public-facing name to VxMark

--- a/apps/mark-scan/frontend/index.html
+++ b/apps/mark-scan/frontend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="/fonts/noto-emoji.css" />
-  <title>VotingWorks VxMarkScan</title>
+  <title>VotingWorks VxMark</title>
 </head>
 
 <body>
