--- a/apps/mark-scan/frontend/public/index.html
+++ b/apps/mark-scan/frontend/public/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
-  <title>VotingWorks VxMarkScan</title>
+  <title>VotingWorks VxMark</title>
 </head>
 
 <body>
