Inject DEPLOY_ENV and SENTRY_DSN into index.html

--- a/apps/design/frontend/index.html
+++ b/apps/design/frontend/index.html
@@ -8,6 +8,12 @@
     <meta name="description" content="Another election tool from VotingWorks" />
     <link rel="stylesheet" href="/fonts/noto-emoji.css" />
     <title>VotingWorks VxDesign</title>
+    <script type="text/javascript">
+      // Inject environment variables from the Node backend by rendering
+      // this HTML page as a template
+      window._vxdesign_deploy_env = '{{ DEPLOY_ENV }}';
+      window._vxdesign_sentry_dsn = '{{ SENTRY_DSN }}';
+    </script>
   </head>
 
   <body>
